fix Truchet on mobile

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -421,6 +421,7 @@ body {
 }
 
 .hero-mission-wrapper {
+  background-size: 300%;
   margin-bottom: 20px;
 }
 
